--- a/index.html
+++ b/index.html
@@ -5,11 +5,267 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <h1>My Website clone</h1>
+    <section class="header">
+        <nav class="nav1">
+            <div class="heading">
+                <div class="search">
+                    <input type="search" placeholder="search lyrics & more">
+                </div>
+                <div class="logo">
+                    <h1>Genius</h1>
+                </div>
+            </div>
+            <div class="nav_link">
+                <ul>
+                    <li><a href="">Sign Up</a></li>
+                    <li><a href="">Sign In</a></li>
+                </ul>
+            </div>
+    </section>
+    </nav>
+    <nav class="nav2">
+        </div>
+        <div class="nav2_link">
+            <ul>
+                <li><a href="">Featured</a></li>
+                <li><a href="">Charts</a></li>
+                <li><a href="">Videos</a></li>
+                <li><a href="">Promote Your Music</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="content">
+        <div class="yeat">
+            <a href="">
+                <div class="yeat_text">
+                    <p>News ------------------------</p>
+                    <div class="quote">
+                        <p>Yeat Doesn't Have Time For Chita-Chat On New Song "Talk"</p>
+                    </div>
+                    <div class="context">
+                        <p>He first teased the single back in June.</p>
+                    </div>
+                    <div class="author">
+                        <p>by Leah Degrazia / Sep 6 2022</p>
+                    </div>
+                </div>
+            </a>
+            <div class="yeat_img">
+                <img src="./images/yeat1.png" alt="yeat">
+            </div>
+        </div>
+        <a href="">
+            <div class="mid_content">
+                <div class="left">
+                    <div class="news">
+                        <p>News</p>
+                    </div>
+                    <div>
+                        <p>Read All The Lyrics To Youngblud's Self-Titled New Album</p>
+                    </div>
+                    <div class="author">
+                        <p>by Leah Degrazia / Sep 2 2022</p>
+                    </div>
+                </div>
+                <div class="mid_left">
+                    <div class="news">
+                        <p></p>
+                    </div>
+                    <div>
+                        <p> </p>
+                    </div>
+                    <div class="author">
+                        <p></p>
+                    </div>
+                </div>
+                <div class="mid_right">
+                    <div class="news">
+                        <p>News</p>
+                    </div>
+                    <div>
+                        <p>Read All The Lyrics To Pi'erre Bourne's New Album 'Good Movie'</p>
+                    </div>
+                    <div class="author">
+                        <p>by Ken Partridge / Sep 2 2022</p>
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="news">
+                        <p>News</p>
+                    </div>
+                    <div>
+                        <p>Genius Community Playlist August 2022</p>
+                    </div>
+                    <div class="author">
+                        <p>by streetlights / Aug 31 2022</p>
+                    </div>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="charts">
+        <div class="chart_text">
+            <p>Charts</p>
+            <p class="trend_text">Trending on Genius</p>
+        </div>
+        <div class="genres">
+            <p>| SONGS / ALL GENRES / TODAY |</p>
+        </div>
+    </div>
+    <div class="songs">
+        <div class="info">
+            <div class="album_img">
+                <p>01</p>
+                <img src="images/list/fuji1.jpg" alt="">
+            </div>
+            <div class="list">
+                <p>藤井風 (Fujii...</p>
+                <p>LYRICs</p>
+                <p>Genius Roma...</p>
+            </div>
+        </div>
+        <div class="info">
+            <div class="album_img">
+                <p>02</p>
+                <img src="images/list/unholy2.png" alt="">
+            </div>
+            <div class="list">
+                <p>Unholy </p>
+                <p>LYRICs</p>
+                <p>Sam Smith...</p>
+            </div>
+        </div>
+        <div class="info">
+            <div class="album_img">
+                <p>03</p>
+                <img src="images/list/godid3.png" alt="">
+            </div>
+            <div class="list">
+                <p>GOD DID</p>
+                <p>LYRICs</p>
+                <p>DJ Khaled</p>
+            </div>
+        </div>
+        <div class="info">
+            <div class="album_img">
+                <p>04</p>
+                <img src="images/list/yoursong4.jpg" alt="">
+            </div>
+            <div class="list">
+                <p>Your Song</p>
+                <p>LYRICs</p>
+                <p>Elton John</p>
+            </div>
+        </div>
+        <div class="info">
+            <div class="album_img">
+                <p>05</p>
+                <img src="images/list/atopos5.png" alt="">
+            </div>
+            <div class="list">
+                <p>Atopos</p>
+                <p>LYRICs</p>
+                <p>Bjork</p>
+            </div>
+        </div>
+        <div class="info">
+            <div class=" album_img">
+                <p>06</p>
+                <img src="images/list/talk6.png" alt="">
+            </div>
+            <div class="list">
+                <p>Talk</p>
+                <p>LYRICs</p>
+                <p>Yeat</p>
+            </div>
+        </div>
+        <div class="info">
+            <div class=" album_img">
+                <p>07</p>
+                <img src="images/list/running7.png" alt="">
+            </div>
+            <div class="list">
+                <p>Running Up T...</p>
+                <p>LYRICs</p>
+                <p>Kate Bush</p>
+            </div>
+        </div>
+        <div class="info">
+            <div class=" album_img">
+                <p>08</p>
+                <img src="images/list/corn8.png" alt="">
+            </div>
+            <div class="list">
+                <p>It's Corn</p>
+                <p>LYRICs</p>
+                <p>The Gregory</p>
+            </div>
+        </div>
+        <div class="info">
+            <div class=" album_img">
+                <p>09</p>
+                <img src="images/list/mary9.jpg" alt="">
+            </div>
+            <div class="list">
+                <p>Mary on a Cross</p>
+                <p>LYRICs</p>
+                <p>Ghost</p>
+            </div>
+        </div>
+        <div class="info">
+            <div class=" album_img">
+                <p>10</p>
+                <img src="images/list/there10.jpg" alt="">
+            </div>
+            <div class="list">
+                <p>There'd Bette...</p>
+                <p>LYRICs</p>
+                <p>Artic Monkeys</p>
+            </div>
+        </div>
+    </div>
+    <div >
+        <div class="load">
+            <a href=""><p>LOAD MORE</p></a>
+        </div>
+    </div>
+    <div class="background_black">
+        <div class="vid_margin">
+            <p class="videos">VIDEOS</p>
+            <p class="original">GENIUS ORIGINAL SERIES</p>
+        </div>
+        <div class="youngblud">
+            <div>
+                <img src="images/youngblud.png" alt="">
+            </div>
+            <div class="verified">
+                <p class="ver_text">VERIFIED</p>
+                <p>YOUNGBLUD Breaks Down The Meaning of "The Funeral</p>
+                <p>Learn about the song's lyrics on the latest episode of 'verified.'</p>
+                <br>
+                <br>
+                <p>by ButterflyHoney / Sep 2 2022</p>
+                <br>
+            </div>
+        </div>
+        <div class="more">
+            <a href=""><p>LOAD MORE</p></a> 
+        </div>
+    </div>
+    <div>
+        <div class="latest">
+            <p>LATEST</p>
+            <P>MOST RECENT NEWS</P>
+        </div>
+        <div>
+            
+        </div>
+    </div>
 </body>
 
 </html>
